--- a/index.html
+++ b/index.html
@@ -2,24 +2,42 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Chromostereopsis</title>
+  <title>Chromostereopsis - Renk ve Derinlik Algısı</title>
+  <meta name="description" content="Chromostereopsis, kırmızı ve mavi gibi kontrast renklerin farklı derinlikte algılanmasına yol açan optik bir yanılsamadır. Bu site renk, algı ve görsel deneyler üzerine hazırlanmıştır.">
+  <meta name="keywords" content="chromostereopsis, optik yanılsama, renk algısı, derinlik, görsel deney, kırmızı mavi kontrast">
+  <meta name="author" content="chromostereopsis">
+  <!-- Mobil uyum için -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background-color: #0000FF; /* Elektrik mavisi */
       font-family: Arial, sans-serif;
       text-align: center;
-      margin-top: 50px;
+      margin: 0;
+      padding: 20px;
     }
     h1 {
-      color: #ffffff; /* Beyaz başlık, mavi arka planda daha net görünür */
+      color: #ffffff;
+      font-size: 2em; /* Mobilde daha okunabilir */
     }
     p {
       color: #f0f0f0;
+      font-size: 1.2em;
+      line-height: 1.5;
+    }
+    /* Küçük ekranlar için responsive ayar */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5em;
+      }
+      p {
+        font-size: 1em;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Merhaba Dünya!</h1>
-  <p>Bu site GitHub Pages üzerinden yayınlandı 🎉</p>
+  <h1>Chromostereopsis nedir?</h1>
+  <p>optik yansılma🎉</p>
 </body>
 </html>
