--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 </head>
 <body>
   <h1>Chromostereopsis nedir?</h1>
-  <p>optik yansılma🎉</p>
+  <p>Chromostereopsis, iki boyutlu renkli görüntülerde (özellikle kırmızı–mavi veya kırmızı–yeşil kontrastlarda) derinlik hissi oluşmasıdır.  
+- İnsan gözü, farklı dalga boylarındaki ışığı farklı şekilde kırdığı için (kromatik aberasyon), bazı renkler retinada diğerlerinden biraz farklı odaklanır. Bu da sanki renkler farklı mesafelerdeymiş gibi bir derinlik algısı yaratır.  
+  </p>
 </body>
 </html>
