--- a/index.html
+++ b/index.html
@@ -39,7 +39,30 @@
 <body>
   <h1>Chromostereopsis nedir?</h1>
   <p>Chromostereopsis, iki boyutlu renkli görüntülerde (özellikle kırmızı–mavi veya kırmızı–yeşil kontrastlarda) derinlik hissi oluşmasıdır.  
-- İnsan gözü, farklı dalga boylarındaki ışığı farklı şekilde kırdığı için (kromatik aberasyon), bazı renkler retinada diğerlerinden biraz farklı odaklanır. Bu da sanki renkler farklı mesafelerdeymiş gibi bir derinlik algısı yaratır.  
+- İnsan gözü, farklı dalga boylarındaki ışığı farklı şekilde kırdığı için (kromatik aberasyon), bazı renkler retinada diğerlerinden biraz farklı odaklanır. Bu da sanki renkler farklı mesafelerdeymiş gibi bir derinlik algısı yaratır. 
+
+    <p>
+  <span style="color:#a600ff">C</span><span style="color:#9e0cff">H</span><span style="color:#9717ff">R</span><span style="color:#8f23ff">O</span><span style="color:#882efe">M</span><span style="color:#803afe">O</span><span style="color:#7946fe">S</span><span style="color:#7151fe">T</span><span style="color:#6a5dfe">E</span><span style="color:#6268fe">R</span><span style="color:#5b74fe">E</span><span style="color:#5380fe">O</span><span style="color:#4b8bfd">P</span><span style="color:#4497fd">S</span><span style="color:#3ca2fd">İ</span><span style="color:#35aefd">S</span> <span style="color:#26c5fd">Y</span><span style="color:#1ed1fd">A</span><span style="color:#17dcfc">Z</span><span style="color:#0fe8fc">I</span> <span style="color:#00fffc">Ö</span><span style="color:#02f4fc">R</span><span style="color:#03e9fc">N</span><span style="color:#05defc">E</span><span style="color:#07d3fd">Ğ</span><span style="color:#09c8fd">İ</span>
+</p>
+
+<p>
+  <span style="color:#0cb1fd">C</span><span style="color:#0ea6fd">H</span><span style="color:#109bfd">R</span><span style="color:#1190fd">O</span><span style="color:#1385fd">M</span><span style="color:#157afe">O</span><span style="color:#176ffe">S</span><span style="color:#1864fe">T</span><span style="color:#1a59fe">E</span><span style="color:#1c4efe">R</span><span style="color:#1e43fe">E</span><span style="color:#1f37fe">O</span><span style="color:#212cfe">P</span><span style="color:#2321ff">S</span><span style="color:#2516ff">İ</span><span style="color:#260bff">S</span> <span style="color:#2e00ff">Y</span><span style="color:#3300ff">A</span><span style="color:#3900ff">Z</span><span style="color:#3f00ff">I</span> <span style="color:#4a00ff">Ö</span><span style="color:#4f00ff">R</span><span style="color:#5500ff">N</span><span style="color:#5b00ff">E</span><span style="color:#6000ff">Ğ</span><span style="color:#6600ff">İ</span>
+</p>
+
+<p>
+  <span style="color:#7100ff">C</span><span style="color:#7700ff">H</span><span style="color:#7d00ff">R</span><span style="color:#8200ff">O</span><span style="color:#8800ff">M</span><span style="color:#8d00ff">O</span><span style="color:#9300ff">S</span><span style="color:#9900ff">T</span><span style="color:#9e00ff">E</span><span style="color:#a400ff">R</span><span style="color:#9d0bff">E</span><span style="color:#9616ff">O</span><span style="color:#8f21ff">P</span><span style="color:#872cff">S</span><span style="color:#8037ff">İ</span><span style="color:#7943ff">S</span> <span style="color:#6b59ff">Y</span><span style="color:#6464ff">A</span><span style="color:#5d6fff">Z</span><span style="color:#567aff">I</span> <span style="color:#4790ff">Ö</span><span style="color:#409bff">R</span><span style="color:#39a6ff">N</span><span style="color:#32b1ff">E</span><span style="color:#2bbcff">Ğ</span><span style="color:#24c8ff">İ</span>
+</p>
+
+<p>
+  <span style="color:#15deff">C</span><span style="color:#0ee9ff">H</span><span style="color:#07f4ff">R</span><span style="color:#00ffff">O</span><span style="color:#00f3ff">M</span><span style="color:#00e8ff">O</span><span style="color:#00dcff">S</span><span style="color:#00d1ff">T</span><span style="color:#00c5ff">E</span><span style="color:#00b9ff">R</span><span style="color:#00aeff">E</span><span style="color:#00a2ff">O</span><span style="color:#0097ff">P</span><span style="color:#008bff">S</span><span style="color:#007fff">İ</span><span style="color:#0074ff">S</span> <span style="color:#005dff">Y</span><span style="color:#0051ff">A</span><span style="color:#0046ff">Z</span><span style="color:#003aff">I</span> <span style="color:#0023ff">Ö</span><span style="color:#0017ff">R</span><span style="color:#000cff">N</span><span style="color:#0000ff">E</span><span style="color:#0600ff">Ğ</span><span style="color:#0c00ff">İ</span>
+</p>
+
+<p>
+  <span style="color:#1800ff">C</span><span style="color:#1e00ff">H</span><span style="color:#2400ff">R</span><span style="color:#2a00ff">O</span><span style="color:#3000ff">M</span><span style="color:#3600ff">O</span><span style="color:#3c00ff">S</span><span style="color:#4200ff">T</span><span style="color:#4900ff">E</span><span style="color:#4f00ff">R</span><span style="color:#5500ff">E</span><span style="color:#5b00ff">O</span><span style="color:#6100ff">P</span><span style="color:#6700ff">S</span><span style="color:#6d00ff">İ</span><span style="color:#7300ff">S</span> <span style="color:#7f00ff">Y</span><span style="color:#8500ff">A</span><span style="color:#8b00ff">Z</span><span style="color:#850aff">I</span> <span style="color:#781fff">Ö</span><span style="color:#7229ff">R</span><span style="color:#6b34ff">N</span><span style="color:#653eff">E</span><span style="color:#5f48ff">Ğ</span><span style="color:#5853ff">İ</span>
+</p>
+
+<p>
+  <span style="color:#4c67ff">C</span><span style="color:#4671ff">H</span><span style="color:#3f7cff">R</span><span style="color:#3986ff">O</span><span style="color:#3390ff">M</span><span style="color:#2c9bff">O</span><span style="color:#26a5ff">S</span><span style="color:#20afff">T</span><span style="color:#19baff">E</span><span style="color:#13c4ff">R</span><span style="color:#0dceff">E</span><span style="color:#06d9ff">O</span><span style="color:#00e3ff">P</span><span style="color:#00dbff">
   </p>
 </body>
 </html>
