--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <p>
    </p> 
 <video controls style="max-width:100%; height:auto; display:block; margin:0 auto;">
-    <source src="chromostereopsis.github.io/Video_2026-02-14_16_51_29.mp4" type="type/mp4">
+    <source src="https://chromostereopsis.github.io/Video_2026-02-14_16_51_29.mp4" type="type/mp4">
     TTarayıcınızvideo eetiketiniddesteklemiyor
 </video>
   
